--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build-ts && npm run serve",
     "build-ts": "tsc",
     "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
-    "test": "jest --forceExit --verbose",
+    "test": "jest --forceExit --detectOpenHandles --verbose",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "copy-static-assets": "ts-node copyAssets.ts"
   },
