--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
+    "arrow-parens": ["error", "as-needed"],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": 1,
     "@typescript-eslint/no-inferrable-types": [
